[MIG] exam : Migrated into 17.0

--- a/exam/wizard/exam_subject_result_view.xml
+++ b/exam/wizard/exam_subject_result_view.xml
@@ -21,7 +21,8 @@
                 </field>
                 <footer>
                     <button
-                        class="btn btn-sm btn-default fa fa-book oe_highlight"
+                        class="btn btn-sm btn-default oe_highlight"
+                        icon="fa-book"
                         name='result_report'
                         type='object'
                         string='Result'
